# NOVA

./: .dockerignore  .env.example  .gitignore  AI_QUALITY_FREEZE_1_0.md  CONFIG_REVISION_FREEZE_1_0.md  CONTROL_PLANE_FREEZE_1_0.md  CUSTOMER_INSTALL_ACCEPTANCE_GUIDE.md  DEPLOYMENT_RECOVERY_FREEZE_1_0.md  Dockerfile  ENTERPRISE_ACCEPTANCE_1_0.md  FINAL_ACCEPTANCE_EVIDENCE_20260505.md  FINAL_ACCEPTANCE_FREEZE_1_0.md  NOVA.spec  PRODUCT_EXECUTION.md  PRODUCT_FREEZE_1_0.md  README.md  ROADMAP_1_1.md  RUNTIME_FREEZE_1_0.md  WINDOWS_EXE_FREEZE_1_0.md  build_windows_exe.bat  docker-compose.yml  install.bat  install.sh  main.py  nova.config.example.json  nova_default.toml  pyproject.toml  setup_wizard.py  windows_launcher.py
.github/workflows/: ci.yaml
apps/nova_runtime/: bootstrap.py
apps/nova_server/: main.py
apps/nova_studio/: __init__.py  routes.py
apps/nova_worker/: __init__.py  main.py
characters/templates/: energetic_host.toml  supportive_companion.toml
deploy/k8s/: helmrelease.yaml  nova-deployment.yaml  nova-ingress.yaml
deploy/testing/: locustfile.py
deploy/tools/: DLQ_REPLAY.md  backup.py  compose_smoke.py  compose_workers_smoke.py  dlq_replay.py  eventbus_external_smoke.py  init_postgres.py  init_postgres.sql
docs/open-platform/: ADAPTER_SDK.md  (+4 more)
evals/: minimal_ai_eval.json
knowledge/: nova_faq.toml
reports/: minimal_ai_eval_report.json
scripts/: run_minimal_ai_eval.py
tests/: test_api_smoke.py  test_core.py  test_dlq_replay.py  test_hot_state.py  test_memory_consolidation_runtime.py  test_postgres_store.py  test_productization_smoke.py  test_runtime_bootstrap.py  test_semantic_routing.py  test_windows_launcher.py
(+20 files in other folders)
